--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "weather-cli",
-  "version": "1.0.0",
+  "name": "weather-node-cli",
+  "version": "1.0.3",
   "description": "weather terminal app",
   "main": "weather.js",
   "bin": {
@@ -16,7 +16,7 @@
   "funding": "",
   "brawser": "",
   "scripts": {
-    "start": "node index.js",
+    "start": "node weather.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -28,7 +28,7 @@
   "homepage": "",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "/VshivcevA/weather-cli"
   },
   "bugs": {
     "url": "",
